--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 validate:
-  image: secsrv-cicd:2112
+  image: gossin/secsrv-cicd:2112
   script:
     - pwsh -Command 'Invoke-ScriptAnalyzer -EnableExit code/*.ps1'
 
